--- a/vignettes/02-Diagonal-model-with-multiple-ages.Rmd
+++ b/vignettes/02-Diagonal-model-with-multiple-ages.Rmd
@@ -3,25 +3,19 @@ title: "Diagonal Case - Multiple Stocks/Ages"
 author: "Carl James Schwarz"
 date: "`r Sys.Date()`"
 output: 
-  rmarkdown::html_vignette: 
+  html_vignette: 
     toc: true # table of content true
     toc_depth: 3  # upto three depths of headings (specified by #, ## and ###)
     number_sections: true  ## if you want number sections at each table header
-vignette: >
-  %\VignetteIndexEntry{02 - Diagonal Case - Multiple Stocks/Ages}
-  %\VignetteEncoding{UTF-8}
-  %\VignetteEngine{knitr::rmarkdown_notangle}
+#vignette: >
+#  %\VignetteIndexEntry{02 - Diagonal Case - Multiple Stocks/Ages}
+#  %\VignetteEncoding{UTF-8}
+#  %\VignetteEngine{knitr::rmarkdown_notangle}
 editor_options: 
   chunk_output_type: inline
 ---
 
 ```{r setup, include = FALSE,message=FALSE}
-# turn off evaluation during R CMD check etc
-# See https://stackoverflow.com/questions/28961431/computationally-heavy-r-vignettes
-is_check <- ("CheckExEnv" %in% search()) || any(c("_R_CHECK_TIMINGS_",
-             "_R_CHECK_LICENSE_") %in% names(Sys.getenv()))
-knitr::opts_chunk$set(eval = !is_check)
-
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
@@ -31,11 +25,18 @@ library(BTSPAS)
 library(ggplot2)
 max.width=70
 ```
-# Introduction
+# Location of vignette source and code.
+Because of the length of time needed to run the vignettes, only
+static vignettes have been included with this package.
 
+The original of the vignettes and the code can be obtained from 
+the GitHub site at
+https://github.com/cschwarz-stat-sfu-ca/BTSPAS
+
+# Introduction
 In some cases, the population of fish consist of a mixture of ages (young of year, and juvenile) and
 stocks (wild and hatchery). *BTSPAS* has a number of routines to handle three common
-occurances as explained below.
+occurrences as explained below.
 
 In all cases, only diagonal recoveries are allowed.
 
@@ -107,12 +108,12 @@ There are several unusual features of the data set:
 * No fish were tagged and released in the first stratum. So no information is available
 to estimate the capture efficiency at the second trap in the first week.
 * In one of the recovery strata, there were no recaptures and so the
-estimated recapture probabiiity will be zero. But the data shows that some unmarked
+estimated recapture probability will be zero. But the data shows that some unmarked
 fish were captured in these strata, so the actual efficiency must have been non-zero.
-* There one julian week  where the number of umarked fish captured suddenly jumps by
+* There one julian week  where the number of unmarked fish captured suddenly jumps by
 several orders of magnitude. This
 jump correspond to releases of hatchery fish into the system.
-* Before the hatchery release, we know that all of the unmarked fiwh
+* Before the hatchery release, we know that all of the unmarked fish
 without an adipose clip are wild fish.
 
 ## Fitting the  BTSPAS diagonal model
@@ -121,7 +122,7 @@ We already read in the data above. Here we set the rest of the parameters.
 
 * the *hatch.after* variable indicates the stratum after which hatchery fish are released
 * the *bad.m2* variable identifies the stratum where the $m2$ value is unusual.
-* the *clip.frac.H* variable indentified what fraction of the hatchery fish have adipose fin clips.
+* the *clip.frac.H* variable identify what fraction of the hatchery fish have adipose fin clips.
 
 Don't forget to set the working directory as appropriate:
 ```{r }
@@ -278,12 +279,12 @@ print(demo2.data)
 
 There are several unusual features of the data set: 
 
-* No fish were tagged and released in the first two strata nor in the last straum. So no information is available
+* No fish were tagged and released in the first two strata nor in the last stratum. So no information is available
 to estimate the capture efficiency at the second trap in these strata.
-* There one julian week  where the number of umarked fish captured suddenly jumps by
+* There one julian week  where the number of unmarked fish captured suddenly jumps by
 several orders of magnitude. This
 jump correspond to releases of hatchery fish into the system.
-* Before the hatchery release, we know that all of the unmarked fiwh
+* Before the hatchery release, we know that all of the unmarked fish
 without an adipose clip are wild fish.
 
 ## Fitting the  BTSPAS diagonal model
@@ -292,7 +293,7 @@ We already read in the data above. Here we set the rest of the parameters.
 
 * the *hatch.after* variable indicates the stratum after which hatchery fish are released
 * the *bad.m2* variable identifies the stratum where the $m2$ value is unusual.
-* the *clip.frac.H* variables indentified what fraction of the hatchery fish have adipose fin clips in the YoY and Age 1 fish.
+* the *clip.frac.H* variables identify what fraction of the hatchery fish have adipose fin clips in the YoY and Age 1 fish.
 
 Don't forget to set the working directory as appropriate:
 ```{r }
@@ -388,7 +389,7 @@ round(demo2.fit$summary[ grepl("Utot", row.names(demo2.fit$summary)),],1)
 
 # Wild and Hatchery Steelhead with YoY and Age 1 fish.
 
-In this analysis we fit a diagonal time-stratifed Petersen estimator 
+In this analysis we fit a diagonal time-stratified Petersen estimator 
 separating wind from hatchery Steelhead salmon..
 
 This differs from the Wild vs Hatchery Chinook salmon in previous sections in that all hatchery raised steelhead are marked,
@@ -467,10 +468,10 @@ There are several unusual features of the data set:
 * Marking and releasing of steelhead took place in only a few weeks! The hierarchical model
 will extrapolate outside these weeks to estimate the capture rate. This is likely a very dangerous thing
 to do.
-* There one julian week  where the number of umarked fish captured suddenly jumps by
+* There one julian week  where the number of unmarked fish captured suddenly jumps by
 several orders of magnitude. This
 jump correspond to releases of hatchery fish into the system.
-* Before the hatchery release, we know that all of the unmarked fiwh
+* Before the hatchery release, we know that all of the unmarked fish
 without an adipose clip are wild fish.
 
 ## Fitting the  BTSPAS diagonal model
@@ -479,7 +480,7 @@ We already read in the data above. Here we set the rest of the parameters.
 
 * the *hatch.after* variable indicates the stratum after which hatchery fish are released
 * the *bad.m2* variable identifies the stratum where the $m2$ value is unusual.
-* the *clip.frac.H* variables indentified what fraction of the hatchery fish have adipose fin clips in the YoY and Age 1 fish.
+* the *clip.frac.H* variables identify what fraction of the hatchery fish have adipose fin clips in the YoY and Age 1 fish.
 
 Don't forget to set the working directory as appropriate:
 ```{r }
